dependencies and plugins are add